# ez-rust-discovery

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: grpc_service.rs
src/: config.rs  error.rs  lib.rs  manager.rs
tests/: integration.rs
